--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,18 +7,20 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 .wrapper {
 	width: 100%;
-	padding-left:15%;
-	padding-right: 15%;
-	
+	padding-left:25%;
+	padding-right:25%;
+}
 
+nav {
+	border-bottom: 1px solid #bdc3c7;
 }
 
 #nav_inner {
 	background-color: white;
 	width: 100%;
-	height: 40px;
-	padding-left: 5%;
-	padding-right: 5%;
+	height: 50px;
+	padding-left: 15%;
+	padding-right: 15%;
 }
 
 .navbar_links, .account_links {
@@ -27,7 +29,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 .navbar_links li, .account_links li {
 	font-family: Arial;
-	font-size: 13px;
+	font-size: 14px;
 	margin-right: 3%;
 }
 
@@ -39,17 +41,40 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	float: right;
 }
 
-.navbar_links a, .account_links a {
+.navbar_links a, .account_links a, .account_links input {
 	display: table-cell;
-	height: 40px;
+	height: 50px;
 	vertical-align: middle;
 	text-decoration: none;
 	color: #828282;
-	font-weight: 700;
+	font-weight: 400;
+}
+
+.account_links input {
+	display: table-cell;
+	margin-top: 10px;
+	height: 30px;
+	width: 200px;
+	vertical-align: middle;
+	text-decoration: none;
+	border-radius: 15px;
+	background-color: #bdc3c7;
+	border: none;
+}
+
+.account_links input:hover {
+	border: none;
+}
+
+::-webkit-input-placeholder {
+   color: white;
+   font-size: 10px;
+   padding-left: 5px;
 }
 
 .navbar_links a:hover {
 	color: #c0392b;
+	border-bottom: 2px solid #c0392b;
 }
 
 .logo, .search_bar, .dm, .settings, .new_tweet {
@@ -58,14 +83,22 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	font-family: Arial;
 }
 
+.icons {
+	max-height: 14px;
+	margin-right: 3px;
+}
+
+#twitter_icon {
+	margin-right: 300px;
+}
+
 body {
-	background-color: #AEEEEE;
+	background-color: #2c3e50;
 }
 
 .left {
 	float: left;
 	width: 30%;
-	background-color: red;
 	padding: 20px;
 }
 
@@ -81,7 +114,6 @@ body {
 .right {
 	float: right;
 	width: 70%;
-	background-color: orange;
 	padding: 20px;
 	padding-left: 0px;
 }
