--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,6 +2,10 @@
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
 
 * {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -97,22 +101,85 @@ body {
 
 .left {
 	float: left;
-	width: 30%;
+	width: 35%;
 	padding: 20px;
 }
 
-.profile, .recommendations, .trending, .about-twitter, .twitter_feed {
+ .recommendations, .trending, .about-twitter, .twitter_feed {
 	width: 100%;
-	height: 200px; /*when we have content this goes "auto"*/
+	height: 200px;
 	background-color: white;
 	margin-bottom: 10px;
 	border-radius: 10px;
-	padding: 10px;
+}
+
+.profile {
+	height: auto;
+	margin-bottom: 10px;
+	background-color: white;
+	width: 100%;
+	border-radius: 10px;
 }
 
 .right {
 	float: right;
-	width: 70%;
+	width: 65%;
 	padding: 20px;
 	padding-left: 0px;
 }
+
+/* left hand content ------------ */
+
+.avatar_background {
+	background-image: url("../images/robot.jpg");
+	height: 150px; 
+	width: auto;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.stats {
+	padding: 10px;
+}
+
+.profile_labels {
+	font-size: 10px;
+	font-family: Arial;
+	color: #7f8c8d;
+}
+
+.profile_data {
+	font-size: 20px;
+	font-family: Arial;
+	color: #c0392b;
+}
+
+td {
+	width: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
