--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,13 +6,12 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   padding: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .wrapper {
 	width: 100%;
-	padding-left:25%;
-	padding-right:25%;
+	padding-left:15%;
+	padding-right:15%;
 }
 
 nav {
@@ -23,8 +22,8 @@ nav {
 	background-color: white;
 	width: 100%;
 	height: 50px;
-	padding-left: 15%;
-	padding-right: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .navbar_links, .account_links {
@@ -43,6 +42,15 @@ nav {
 
 .account_links li {
 	float: right;
+}
+
+.fa-home, .fa-bell, .fa-location-arrow, .fa-user, .fa-envelope, .fa-gear {
+	font-size: 20px;
+}
+
+.fa-twitter {
+	color: #3498db;
+	font-size: 25px;
 }
 
 .navbar_links a, .account_links a, .account_links input {
@@ -71,9 +79,10 @@ nav {
 }
 
 ::-webkit-input-placeholder {
-   color: white;
+   color: #bdc3c7;
    font-size: 10px;
    padding-left: 5px;
+   border: none;
 }
 
 .navbar_links a:hover {
@@ -81,18 +90,17 @@ nav {
 	border-bottom: 2px solid #c0392b;
 }
 
+.account_links a:hover {
+	color: #c0392b;
+}
+
+.navbar_links a:selected{
+	border: none;
+}
+
 .logo, .search_bar, .dm, .settings, .new_tweet {
 	display: inline;
 	float: right;
-}
-
-.icons {
-	max-height: 18px;
-	margin-right: 3px;
-}
-
-#twitter_icon {
-	margin-right: 0px;
 }
 
 body {
@@ -140,6 +148,7 @@ body {
 
 .stats {
 	padding: 10px;
+	border-bottom: 1px solid #95a5a6;
 }
 
 .profile_labels {
@@ -155,14 +164,61 @@ body {
 }
 
 td {
-	width: 50%;
+	width: 45%;
+}
+
+.compose_tweet {
+	padding: 10px;
+	background-color: #bdc3c7;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+.compose_tweet input {
+	height: 30px;
+	width: 100%;
+}
+
+.avatar_background {
+	position: relative;
 }
 
 
+#avatar {
+	display: inline-block;
+	position: relative;
+}
 
+#avatar img {
+	width: auto;
+	height: 50px;
+	border: 3px solid white;
+	position: absolute;
+	border-radius: 3px;
+	left: 120px;
+}
 
+#handle {
+	color: white;
+	font-family: Arial;
+}
 
+.account_name {
+	font-size: 25px;
+	font-weight: 600;
+}
 
+#handle .account_name {
+	position: absolute;
+	left: 115px;
+	top: 80px;
+}
+
+#handle .handle_id {
+	position: absolute;
+	left: 100px;
+	top: 110px;
+}
 
 
 
