--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8,6 +8,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   -moz-box-sizing: border-box;
 }
 
+p {
+	font-family: Arial;
+}
+
 .wrapper {
 	width: 100%;
 	padding-left:15%;
@@ -79,9 +83,9 @@ nav {
 }
 
 ::-webkit-input-placeholder {
-   color: #bdc3c7;
+   color: #95a5a6;
    font-size: 10px;
-   padding-left: 5px;
+   padding-left: 10px;
    border: none;
 }
 
@@ -110,12 +114,12 @@ body {
 .left {
 	float: left;
 	width: 35%;
-	padding: 20px;
+	padding: 10px;
 }
 
  .recommendations, .trending, .about-twitter, .twitter_feed {
 	width: 100%;
-	height: 200px;
+	height: 400px;
 	background-color: white;
 	margin-bottom: 10px;
 	border-radius: 10px;
@@ -132,11 +136,15 @@ body {
 .right {
 	float: right;
 	width: 65%;
-	padding: 20px;
+	padding: 10px;
 	padding-left: 0px;
 }
 
 /* left hand content ------------ */
+
+.profile {
+	border-radius: 10px;
+}
 
 .avatar_background {
 	background-image: url("../images/robot.jpg");
@@ -177,6 +185,9 @@ td {
 .compose_tweet input {
 	height: 30px;
 	width: 100%;
+	color: #bdc3c7;
+	border-radius: 3px;
+	border: none;
 }
 
 .avatar_background {
@@ -220,10 +231,50 @@ td {
 	top: 110px;
 }
 
+/* Left hand content ends ------------------------------------------------- */
 
+/* Right hand content begins ------------------------------------------------- */
 
+.twitter_feed {
+	
+}
 
+.feed_header {
+	font-family: Arial;
+	font-size: 30px;
+	color: #95a5a6;
+	border-bottom: 1px solid #bdc3c7;
+	padding: 15px;
+}
 
+.tweet_left {
+	float: left;
+	width: 10%;
+}
+
+.tweet_right{
+	float: right;
+	width: 85%;
+}
+
+.tweet_avatar {
+	padding:20px;
+}
+
+.tweet_avatar img {
+	width: 50px;
+	height: 50px;
+	border-radius: 5px;
+}
+
+.tweet_content {
+	padding: 20px;
+}
+
+h4 {
+	font-family: Arial;
+	font-weight: 900;
+}
 
 
 
