Styled tweet section

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -119,7 +119,7 @@ body {
 
  .recommendations, .trending, .about-twitter, .twitter_feed {
 	width: 100%;
-	height: 400px;
+	height: auto;
 	background-color: white;
 	margin-bottom: 10px;
 	border-radius: 10px;
@@ -143,15 +143,17 @@ body {
 /* left hand content ------------ */
 
 .profile {
-	border-radius: 10px;
+	border-radius: 6px;
 }
 
 .avatar_background {
 	background-image: url("../images/robot.jpg");
 	height: 150px; 
-	width: auto;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
+	overflow: hidden;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	border-top-left-radius:6px;
+	border-top-right-radius:6px;
 }
 
 .stats {
@@ -178,8 +180,6 @@ td {
 .compose_tweet {
 	padding: 10px;
 	background-color: #bdc3c7;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
 }
 
 .compose_tweet input {
@@ -195,49 +195,43 @@ td {
 }
 
 
-#avatar {
-	display: inline-block;
-	position: relative;
+.avatar_content{
+	display: block;
+	padding-top: 20px;
 }
 
-#avatar img {
+.avatar_image {
+	display: block;
+}
+
+.avatar_image img {
 	width: auto;
 	height: 50px;
 	border: 3px solid white;
 	position: absolute;
+	display: block;
 	border-radius: 3px;
 	left: 120px;
 }
 
-#handle {
+.handle_id {
 	color: white;
 	font-family: Arial;
+	display: block;
+	position: absolute;
 }
 
-.account_name {
+.account_name{
 	font-size: 25px;
 	font-weight: 600;
-}
-
-#handle .account_name {
+	color: white;
+	display: block;
 	position: absolute;
-	left: 115px;
-	top: 80px;
-}
-
-#handle .handle_id {
-	position: absolute;
-	left: 100px;
-	top: 110px;
 }
 
 /* Left hand content ends ------------------------------------------------- */
 
 /* Right hand content begins ------------------------------------------------- */
-
-.twitter_feed {
-	
-}
 
 .feed_header {
 	font-family: Arial;
@@ -247,37 +241,101 @@ td {
 	padding: 15px;
 }
 
-.tweet_left {
-	float: left;
-	width: 10%;
+.twitter_feed {
+	height: 300px;
+	border-radius: 6px;
 }
 
-.tweet_right{
-	float: right;
-	width: 85%;
+.tweet {
+	display: block;
+	padding: 10px;
+	border-bottom: 1px solid #bdc3c7;
 }
 
-.tweet_avatar {
-	padding:20px;
+.tweet_body {
+	padding: 15px;
+	margin-bottom: 15px;
+}
+
+.tweet_content {
+	display: block;
+	overflow: hidden;
+	zoom: 1;
 }
 
 .tweet_avatar img {
 	width: 50px;
 	height: 50px;
 	border-radius: 5px;
+	float: left;
+	margin-right: 10px;
+	display: block;
 }
 
-.tweet_content {
-	padding: 20px;
-}
-
-h4 {
+.tweet_username {
 	font-family: Arial;
 	font-weight: 900;
+	font-size: 14px;
 }
 
+.tweet_handle {
+	font-family: Arial;
+	font-size: 14px;
+	color: #95a5a6;
+	margin-left: 5px;
+}
 
+.tweet_username a {
+	text-decoration: none;
+	color: black;
+}
 
+.time a {
+	text-decoration: none;
+	font-family: Arial;
+	font-size: 14px;
+	color: #95a5a6;
+}
+
+.tweet_username a:hover, .expand a:hover, .time a:hover {
+	color: #c0392b;
+}
+
+.tweet_message {
+	font-family: Arial;
+	font-size: 14px;
+	display: block;
+	line-height: 1.3em;
+}
+
+.tweet_footer {
+	font-family: Arial;
+	font-size: 12px;
+	display: block;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.expand a {
+	color: #95a5a6;
+	text-decoration: none;
+}
+
+.footer_action a {
+	color: #e3e3e3;
+	text-decoration: none;
+}
+
+.expand {
+	display: inline-block;
+	float: left;
+}
+
+.footer_action li {
+	display: inline-block;
+	float: right;
+	margin-left: 10px;
+}
 
 
 
