--- a/public/css/application.css
+++ b/public/css/application.css
@@ -84,7 +84,7 @@ nav {
 
 ::-webkit-input-placeholder {
    color: #95a5a6;
-   font-size: 10px;
+   font-size: 12px;
    padding-left: 10px;
    border: none;
 }
@@ -185,11 +185,15 @@ td {
 	border-bottom-right-radius: 6px;
 }
 
-.compose_tweet input {
+#tweet_input {
 	height: 30px;
 	width: 100%;
 	color: #bdc3c7;
 	border-radius: 3px;
+	border: none;
+}
+
+#tweet_input:hover {
 	border: none;
 }
 
@@ -258,7 +262,6 @@ td {
 }
 
 .twitter_feed {
-	height: 300px;
 	border-radius: 6px;
 }
 
