--- a/public/css/application.css
+++ b/public/css/application.css
@@ -18,8 +18,12 @@ p {
 	padding-right:15%;
 }
 
-nav {
+
+header {
 	border-bottom: 1px solid #bdc3c7;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 #nav_inner {
@@ -111,6 +115,10 @@ body {
 	background-color: #2c3e50;
 }
 
+.content_background {
+	margin-top: 60px;
+}
+
 .left {
 	float: left;
 	width: 35%;
@@ -179,14 +187,13 @@ td {
 }
 
 .compose_tweet {
-	padding: 10px;
+	padding: 12px;
 	background-color: #bdc3c7;
 	border-bottom-left-radius: 6px;
 	border-bottom-right-radius: 6px;
 }
 
 #tweet_input {
-	height: 30px;
 	width: 100%;
 	color: #bdc3c7;
 	border-radius: 3px;
